# MIDAS-API-NX-SDK

./: .gitignore  LICENSE  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  manual-drift-check.yml  publish.yml
docs/: coverage.json  live_verification_notes.md
docs/en/: quickstart.md
docs/ko/: quickstart.md
docs/zh-tw/: quickstart.md
examples/python/: kds_wind_load.py  quickstart.py  simple_beam_load_combination.py
scripts/: check_drift.py  check_manual_drift.py  gen_endpoint.py  gen_roadmap.py  live_smoke.py  vendor_coverage.py
src/midas_nx/: __init__.py  client.py  doc.py  ope.py  view.py
src/midas_nx/db/: analysis_control.py  base.py  boundary.py  bridge.py  construction_stage.py  design.py  dynamic_loads.py  load_combinations.py  misc_loads.py  moving_loads.py  node_element.py  project.py  pushover.py  static_loads.py  temperature_prestress.py
src/midas_nx/db/properties/: damping.py  hinge.py  material.py  section.py  thickness.py
src/midas_nx/design/: src_aiksrc2k.py  steel_kds.py
src/midas_nx/design/rc_kds/: checks.py  design_forces.py  rebar.py  setup.py
src/midas_nx/post/: base.py  design.py  pre_process.py  result_1.py  story.py
tests/: conftest.py  test_client.py  test_doc.py  test_ope.py  test_view.py
tests/db/: test_analysis_control.py  test_base.py  test_boundary.py  test_bridge.py  test_construction_stage.py  test_design_rc_kds_checks.py  test_design_rc_kds_design_forces.py  test_design_rc_kds_rebar.py  test_design_rc_kds_setup.py  test_design_setup.py  test_design_src_aiksrc2k.py  test_design_steel_kds.py  test_dynamic_loads.py  test_load_combinations.py  test_misc_loads.py  test_moving_loads.py  test_node_element.py  test_project.py  test_properties.py  test_pushover.py  test_static_loads.py  test_temperature_prestress.py
tests/post/: test_design.py  test_pre_process.py  test_result_1.py  test_story.py
