[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midas-nx"
version = "0.5.0"
description = "Independent, unified Python SDK for the MIDAS NX Open API (Civil NX + Gen NX)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Dennis5882" }]
keywords = ["midas", "midas-nx", "civil-nx", "gen-nx", "structural-engineering"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "requests>=2.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "responses>=0.23",
]

[project.urls]
Homepage = "https://github.com/Dennis5882/MIDAS-API-NX-SDK"
Manual = "https://github.com/Dennis5882/MIDAS-API"

[tool.hatch.build.targets.wheel]
packages = ["src/midas_nx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
