[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midas-nx"
version = "0.10.0"
description = "Independent, unified Python SDK for the MIDAS NX Open API (Civil NX + Gen NX)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Dennis5882" }]
keywords = [
  "midas", "midas-nx", "midas-gen", "midas-civil", "civil-nx", "gen-nx",
  "midas-gen-nx", "midas-civil-nx", "midas-api", "midas-open-api",
  "structural-engineering", "structural-analysis", "finite-element",
  "fea", "bridge-design", "sdk", "api-wrapper", "midasit",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "responses>=0.23",
  "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/Dennis5882/MIDAS-API-NX-SDK"
Repository = "https://github.com/Dennis5882/MIDAS-API-NX-SDK"
Documentation = "https://github.com/Dennis5882/MIDAS-API-NX-SDK/blob/main/ROADMAP.md"
"Bug Tracker" = "https://github.com/Dennis5882/MIDAS-API-NX-SDK/issues"
Changelog = "https://github.com/Dennis5882/MIDAS-API-NX-SDK/releases"
Manual = "https://github.com/Dennis5882/MIDAS-API"

[tool.hatch.build.targets.wheel]
packages = ["src/midas_nx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["F", "I"]
